03/demos/demo3/productpage-auth-just-valid-token.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "frontend-ingress"
  namespace: default     
spec:
  selector:
    matchLabels:
      app: productpage   
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
