03/demos/demo3/productpage-authz-allow-issuer.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "frontend-ingress"
  namespace: default     
spec:
  selector:
    matchLabels:
      app: productpage   
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
    when:
    - key: request.auth.claims[iss]
      values: ["testing@secure.istio.io"]
